@@ -2,57 +2,67 @@ package org.xcolab.service.members.util;
 
 import org.apache.commons.lang3.StringUtils;
 
-import javax.crypto.SecretKey;
-import javax.crypto.SecretKeyFactory;
-import javax.crypto.spec.PBEKeySpec;
-import java.nio.ByteBuffer;
+import java.math.BigInteger;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.InvalidKeySpecException;
-import java.util.Base64;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import javax.crypto.SecretKey;
+import javax.crypto.SecretKeyFactory;
+import javax.crypto.spec.PBEKeySpec;
+import javax.xml.bind.DatatypeConverter;
+
 public class PBKDF2PasswordEncryptor {
+
+    public static final String DEFAULT_ALGORITHM = "PBKDF2WITHHMACSHA1/160/128000";
+
     private static final int _KEY_SIZE = 160;
     private static final int _ROUNDS = 128000;
     private static final int _SALT_BYTES_LENGTH = 8;
-    private static final Pattern _pattern = Pattern.compile("^.*/?([0-9]+)?/([0-9]+)$");
+    private static final Pattern ALGORITHM_PATTERN = Pattern.compile("^.*/?([0-9]+)?/([0-9]+)$");
+    private static final Pattern ENCODED_HASH_PATTERN = Pattern.compile("^?([0-9]+)_([0-9]+)_([0-9A-Za-z+/=]+)_([0-9A-Za-z+/=]+)$");
 
     public String doEncrypt(String algorithm, String plainTextPassword, String encryptedPassword)
-            throws NoSuchAlgorithmException, InvalidKeySpecException {
+            throws NoSuchAlgorithmException {
 
-            PBKDF2EncryptionConfiguration pbkdf2EncryptionConfiguration = new PBKDF2EncryptionConfiguration();
+        PBKDF2EncryptionConfiguration pbkdf2EncryptionConfiguration = new PBKDF2EncryptionConfiguration();
 
-            pbkdf2EncryptionConfiguration.configure(algorithm, encryptedPassword);
+        pbkdf2EncryptionConfiguration.configure(algorithm, encryptedPassword);
 
-            byte[] saltBytes = pbkdf2EncryptionConfiguration.getSaltBytes();
+        byte[] saltBytes = pbkdf2EncryptionConfiguration.getSaltBytes();
 
-            PBEKeySpec pbeKeySpec = new PBEKeySpec(
-                    plainTextPassword.toCharArray(), saltBytes,
-                    pbkdf2EncryptionConfiguration.getRounds(),
-                    pbkdf2EncryptionConfiguration.getKeySize());
+        PBEKeySpec pbeKeySpec = new PBEKeySpec(
+                plainTextPassword.toCharArray(), saltBytes,
+                pbkdf2EncryptionConfiguration.getRounds(),
+                pbkdf2EncryptionConfiguration.getKeySize());
 
-            String algorithmName = algorithm;
+        String algorithmName = algorithm;
 
-            int index = algorithm.indexOf("/");
+        int index = algorithm.indexOf("/");
 
-            if (index > -1) {
-                algorithmName = algorithm.substring(0, index);
-            }
+        if (index > -1) {
+            algorithmName = algorithm.substring(0, index);
+        }
 
-            SecretKeyFactory secretKeyFactory = SecretKeyFactory.getInstance(algorithmName);
+        SecretKeyFactory secretKeyFactory = SecretKeyFactory.getInstance(algorithmName);
 
-            SecretKey secretKey = secretKeyFactory.generateSecret(pbeKeySpec);
+        SecretKey secretKey;
+        try {
+            secretKey = secretKeyFactory.generateSecret(pbeKeySpec);
+        } catch (InvalidKeySpecException e) {
+            throw new RuntimeException(e);
+        }
 
-            byte[] secretKeyBytes = secretKey.getEncoded();
+        byte[] secretKeyBytes = secretKey.getEncoded();
 
-            ByteBuffer byteBuffer = ByteBuffer.allocate(2 * 4 + saltBytes.length + secretKeyBytes.length);
-
-            byteBuffer.putInt(pbkdf2EncryptionConfiguration.getKeySize());
-            byteBuffer.putInt(pbkdf2EncryptionConfiguration.getRounds());
-            byteBuffer.put(saltBytes);
-            byteBuffer.put(secretKeyBytes);
-            return Base64.getEncoder().encodeToString(byteBuffer.array());
+        return String.valueOf(pbkdf2EncryptionConfiguration.getKeySize()) +
+                "_" +
+                pbkdf2EncryptionConfiguration.getRounds() +
+                "_" +
+                DatatypeConverter.printBase64Binary(saltBytes) +
+                "_" +
+                DatatypeConverter.printBase64Binary(secretKeyBytes);
     }
 
     private class PBKDF2EncryptionConfiguration {
@@ -63,7 +73,7 @@ public class PBKDF2PasswordEncryptor {
 
         public void configure(String algorithm, String encryptedPassword) {
             if (StringUtils.isEmpty(encryptedPassword)) {
-                Matcher matcher = _pattern.matcher(algorithm);
+                Matcher matcher = ALGORITHM_PATTERN.matcher(algorithm);
 
                 if (matcher.matches()) {
                     try {
@@ -80,17 +90,21 @@ public class PBKDF2PasswordEncryptor {
 
                 BigEndianCodec.putLong(_saltBytes, 0, SecureRandomUtil.nextLong());
             } else {
-                byte[] bytes = new byte[16];
-
-                byte[] encryptedPasswordBytes = Base64.getDecoder().decode(encryptedPassword);
-                System.arraycopy(encryptedPasswordBytes, 0, bytes, 0, bytes.length);
-
-                ByteBuffer byteBuffer = ByteBuffer.wrap(bytes);
-
-                _keySize = byteBuffer.getInt();
-                _rounds = byteBuffer.getInt();
-
-                byteBuffer.get(_saltBytes);
+                Matcher matcher = ENCODED_HASH_PATTERN.matcher(encryptedPassword);
+                if (matcher.matches()) {
+                    try {
+                        _keySize = Integer.parseInt(matcher.group(1));
+                    } catch (NumberFormatException e) {
+                        _keySize = _KEY_SIZE;
+                    }
+                    try {
+                        _rounds = Integer.parseInt(matcher.group(2));
+                    } catch (NumberFormatException e) {
+                        _rounds = _ROUNDS;
+                    }
+                    BigEndianCodec.putLong(_saltBytes, 0, new BigInteger(
+                            DatatypeConverter.parseBase64Binary(matcher.group(3))).longValue());
+                }
             }
         }
 
